# psychotherapy-rag-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: export-github-secrets.ps1  psy-agent-app.yml
k8s/: deploy.yml  secrets.yml
monitoring/: README.md  docker-compose.yml
monitoring/grafana/dashboards/: main-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
src/: agent.py  exception_handling.py  metrics.py  prompts.py  streamlit-app.py
src/mcp_service/: mcp_client.py  mcp_server.py
src/metrics/: metrics.py
src/prompts/: prompts.py
src/resources/: therapist-policy.txt
src/tools/: search_tools.py
test/agent/: agent_response_test.py  agent_router_test.py  agent_summarization_test.py  agent_trajectory.py  agent_trajectory_test.py  mocked_tools.py
test/rag/: rag_test.py
test/resources/agent/: router-test-dataset.csv  test-question-answer.yml  trajectory-test-datataset.csv
test/resources/rag/: eval-questions.csv  test-questions.yml
